# Langgraph-Team

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.official.yml  docker-compose.yml  langgraph.json  pyproject.toml
.github/workflows/: ci.yml
agents/: agent_builder.md  executor_sandbox_tester.md  git_docs_deployment_specialist.md  memory_skills_tools_designer.md  orchestrator.md  planner_architect.md  reviewer_critic.md  verifier_evaluator.md
deployments/caddy/: Caddyfile
deployments/k3s/: app.yaml
docs/: AGENTS.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  INTEGRATIONS.md  PRODUCTION_READINESS.md
docs/adr/: 0001-deterministic-mvp.md  0002-docker-compose-vps.md
docs/reports/: TEST_REPORT_2026-06-18.md  VERIFICATION_REPORT_2026-06-18.md
js-adapters/: package-lock.json  package.json
js-adapters/src/: client.ts  deep-agents.ts  index.ts  langchain.ts  langgraph.ts
prompts/: agent_builder.md  executor_sandbox_tester.md  git_docs_deployment_specialist.md  memory_skills_tools_designer.md  orchestrator.md  planner_architect.md  reviewer_critic.md  verifier_evaluator.md
scripts/: deploy_vps.sh
skills/: __init__.py  langgraph_project_scaffolder.md  langgraph_project_scaffolder.py
templates/: 01_README_Template.md  02_ARCHITECTURE_Template.md  03_AGENT_SPEC_Template.md  04_SKILL_DEFINITION_Template.md  05_TEST_REPORT_Template.md  06_VERIFICATION_REPORT_Template.md  07_DEPLOYMENT_Template.md
tests/: test_api.py  test_graph.py  test_integrations.py  test_models.py  test_skill.py
(+18 files in other folders)
